fix clamp crash